# A2D

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/travis/: install_linux.sh  install_osx.sh
engine/: CMakeLists.txt
engine/include/A2D/: core.h  glsl_shader.h  math.h  renderer.h
engine/include/A2D/core/: component.h  engine.h  intrusive_ptr.h  macro.h  object2d.h  ref_counter.h
engine/include/A2D/core/components/: camera.h  sprite.h
engine/include/A2D/math/: matrix.h
engine/include/a2d/: core.h
engine/include/a2d/core/: audio.h  audio_clip.h  bitmap_font.h  component.h  drawable.h  engine.h  filesystem.h  glsl_shader.h  input.h  intrusive_ptr.h  macro.h  material.h  native_filesystem.h  native_renderer.h  object2d.h  physics.h  renderer.h  shader.h  sprite_batch.h  texture.h
engine/include/a2d/core/components/: animator.h  audio_clip.h  audio_source.h  camera.h  events_test.h  line.h  physics_body.h  pixel_camera.h  pixel_sprite.h  pixel_text.h  sprite.h  text.h
engine/include/a2d/math/: matrix.h  vector.h
engine/src/: component.cpp  engine.cpp  glsl_shader.cpp  object2d.cpp  renderer.cpp
engine/src/a2d/: a2d.h  a2d.hpp
engine/src/a2d/audio/: audio.cpp
engine/src/a2d/cmake/: build_shaders.cmake
engine/src/a2d/core/: audio.cpp  audio_clip.cpp  audio_clip.h  bitmap_font.cpp  bitmap_font.h  component.cpp  component.hpp  drawable.cpp  drawable.h  drawable.hpp  engine.cpp  engine.hpp  gl.h  intrusive_ptr.h  intrusive_ptr.hpp  macro.hpp  object2d.cpp  object2d.h  object2d.hpp  physics.hpp  resources.cpp  resources.hpp  sprite_batch.cpp  sprite_batch.h
engine/src/a2d/core/commands/: component_add_command.h  component_destroy_command.h  lambda_command.h
engine/src/a2d/core/components/: animator.cpp  animator.h  animator.hpp  audio_source.hpp  camera.cpp  camera.h  events_test.h  events_test.hpp  line.h  line.hpp  pixel_camera.cpp  pixel_camera.hpp  sprite.cpp  sprite.h  sprite.hpp  text.cpp  text.hpp
engine/src/a2d/core/components/physics/: circle_collider.h  circle_collider.hpp  physics_body.h  physics_body.hpp  physics_collider.h  physics_collider.hpp
engine/src/a2d/filesystem/: filesystem.cpp  filesystem.h
engine/src/a2d/graphics/: animation.cpp  animation.h  bitmap_font.hpp  build_shaders.cmake  drawable.cpp  drawable.hpp  gl.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  shaders_builtin.cpp.in  sprite_batch.cpp  sprite_batch.hpp  texture.cpp  texture.h  texture.hpp  texture_buffer.cpp  texture_buffer.h  texture_buffer.hpp  texture_region.cpp  texture_region.h  texture_region.hpp
engine/src/a2d/graphics/shaders/color/: fragment.glsl
engine/src/a2d/graphics/shaders/default/: fragment.glsl
engine/src/a2d/graphics/shaders/line/: vertex.glsl
engine/src/a2d/input/: input.cpp  input.h  input.hpp
engine/src/a2d/math/: math.h  math_defines.h  matrix.h  matrix.hpp  vector.h  vector.hpp
engine/src/core/: audio.cpp  bitmap_font.cpp  component.cpp  engine.cpp  filesystem.cpp  glsl_shader.cpp  input.cpp  native_filesystem.cpp  native_renderer.cpp  object2d.cpp  renderer.cpp  shader.cpp  sprite_batch.cpp  texture.cpp
engine/src/core/components/: animator.cpp  audio_source.cpp  camera.cpp  pixel_camera.cpp  pixel_sprite.cpp  sprite.cpp  text.cpp
engine/src/math/: matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
engine/src/shaders/default/: fragment.glsl  vertex.glsl
project_android/app/: build.gradle
project_android/app/src/main/cpp/: CMakeLists.txt  jni_bindings.cpp  native_renderer.cpp  native_renderer.h
project_core/: CMakeLists.txt
project_core/resources/shaders/default/: vertex.glsl
project_core/resources/shaders/line/: fragment.glsl  vertex.glsl
project_core/src/: flash.h  move_camera.h  move_camera.hpp  move_character.h  move_character.hpp  root_component.cpp  root_component.h  root_component.hpp  trump.h
project_desktop/: CMakeLists.txt
project_desktop/src/: main.cpp  native_renderer.h
project_ios/: AppDelegate.swift  CMakeLists.txt  ViewController.swift  build.sh  ios.cmake
src/a2d/: a2d.hpp  native_bridge.hpp  native_to_platform.h  platform.h  platform_to_native.h
src/a2d/audio/: audio.hpp  audio_clip.cpp  audio_clip.hpp  audio_source.cpp  audio_source.hpp
src/a2d/components/: animator.cpp  animator.hpp  audio_source.cpp  audio_source.hpp  camera.cpp  line.hpp  pixel_camera.cpp  pixel_camera.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
src/a2d/core/: camera.cpp  camera.hpp  command.hpp  component.cpp  component.hpp  engine.cpp  engine.hpp  intrusive_ptr.hpp  log.hpp  macro.hpp  object2d.cpp  object2d.hpp  pixel_camera.cpp  pixel_camera.hpp  ref_counter.hpp  resources.cpp  resources.hpp
src/a2d/filesystem/: filesystem.cpp  filesystem.hpp
src/a2d/graphics/: animation.cpp  animation.h  animation.hpp  animator.cpp  animator.hpp  bitmap_font.cpp  bitmap_font.hpp  drawable.cpp  drawable.hpp  line.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  sprite_batch.cpp  sprite_batch.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  texture_buffer.cpp  texture_region.cpp  texture_region.hpp
src/a2d/input/: input.cpp  input.hpp
src/cmake/: build_shaders.cmake  precompiled_header.cmake
tools/: generate.py
tools/macos/: glslcc
tools/template/: CMakeLists.txt
tools/template/projects/proj.android/app/: build.gradle
tools/template/projects/proj.android/app/src/main/: AndroidManifest.xml
tools/template/projects/proj.android/app/src/main/cpp/: CMakeLists.txt  jni_bindings.cpp
tools/template/projects/proj.android/app/src/main/java/com/selya/a2d/: A2DBridge.java  ASurfaceView.java  GLESRenderer.java  MainActivity.java
tools/template/projects/proj.android/app/src/main/res/values/: strings.xml
tools/template/projects/proj.desktop/: CMakeLists.txt
tools/template/projects/proj.desktop/src/: main.cpp
tools/template/projects/proj.ios/: BindingHeader.h  CMakeLists.txt  EngineInterface.cpp  Main.storyboard  build-sim.sh  build-sim64.sh
tools/template/src/: root_component.cpp  root_component.hpp
(+94 files in other folders)
